force-app/main/default/objects/CSV_Export_File__mdt/CSV_Export_File__mdt.object-meta.xml
<CustomObject>
    <description>Use this to define the CSV Export File</description>
    <label>CSV Export File</label>
    <pluralLabel>CSV Export Files</pluralLabel>
</CustomObject>