force-app/main/default/objects/CSV_Export_File__mdt/fields/CSV_Export_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>CSV_Export_RecordType_Name__c</fullName>
    <inlineHelpText>Enter a valid recordtype developer name for which this export should be used against</inlineHelpText>
    <label>CSV Export RecordType Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>