force-app/main/default/objects/CSV_Export_File__mdt/fields/CSV_Header__c.field-meta.xml
<CustomField>
    <fullName>CSV_Header__c</fullName>
    <inlineHelpText>Use this to enter the comma separated values for the export</inlineHelpText>
    <label>CSV Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>