force-app/main/default/objects/CSV_Export_File__mdt/fields/Export_Object__c.field-meta.xml
<CustomField>
    <fullName>Export_Object__c</fullName>
    <inlineHelpText>Enter the child object from the CSV Export record that you want to export to the file</inlineHelpText>
    <label>Export Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CSV_Export_Files</relationshipLabel>
    <relationshipName>CSV_Export_Files</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>