force-app/main/default/objects/CSV_Export_File__mdt/fields/Export_Related_Field__c.field-meta.xml
<CustomField>
    <fullName>Export_Related_Field__c</fullName>
    <inlineHelpText>Use this to specify what field is related on the child object to this CSV Export record</inlineHelpText>
    <label>Export Related Field</label>
    <metadataRelationshipControllingField>CSV_Export_File__mdt.Export_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>CSV_Export_Files</relationshipLabel>
    <relationshipName>CSV_Export_Files</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>