force-app/main/default/objects/CSV_Export_File__mdt/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <inlineHelpText>Enter the name of the file as you want it saved - do not include the extension for the file this is automatically appended to the created file.</inlineHelpText>
    <label>FileName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>