force-app/main/default/objects/CSV_Export_File__mdt/fields/Use_Versioning__c.field-meta.xml
<CustomField>
    <fullName>Use_Versioning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to generate version of files if left a unticked multiple files will appear in the related files list.</inlineHelpText>
    <label>Use Versioning</label>
    <type>Checkbox</type>
</CustomField>